got users to work with api docs
