# routes/index.js
@@ -1,6 +1,25 @@
-const routes = require('express').Router();
+const express = require('express');
+const router = express.Router();
+const { auth } = require('express-openid-connect');
+const dotenv = require('dotenv');
+dotenv.config();
 
-routes.use('/', require('./swagger'))
-routes.use('/entries', require('./entries'));
+const config = {
+  authRequired: false,
+  auth0Logout: true,
+  secret: process.env.SECRET,
+  baseURL: process.env.BASE_URL,
+  clientID: process.env.CLIENT_ID,
+  issuerBaseURL: process.env.ISSUER_BASE_URL
+}
 
-module.exports = routes;
+router.use(auth(config));
+router.get('/checkLoginStatus', (req, res) => {
+  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+});
+
+
+// router.use('/', require('./swagger'))
+router.use('/users', require('./users'));
+
+module.exports = router;
