# swagger.json
@@ -5,28 +5,15 @@
     "description": "Temple API",
     "version": "1.0.0"
   },
-  "host": "cse341final-qxbx.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
-    "/api-docs": {
+    "/checkLoginStatus": {
       "get": {
         "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/entries/getAll": {
-      "get": {
-        "description": "This gets all journal entries that you have",
-        "produces": [
-          "application/json"
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -34,7 +21,23 @@
         }
       }
     },
-    "/entries/getSingle/{id}": {
+    "/users/getAll/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/users/getSingle/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -51,35 +54,28 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
     },
-    "/entries/createSingle": {
+    "/users/createSingle/": {
       "post": {
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": ""
-                },
-                "lastName": {
-                  "example": ""
+                "name": {
+                  "example": "any"
                 },
                 "email": {
-                  "example": ""
-                },
-                "favoriteColor": {
-                  "example": ""
-                },
-                "birthday": {
-                  "example": ""
+                  "example": "any"
                 }
               }
             }
@@ -89,13 +85,16 @@
           "201": {
             "description": "Created"
           },
+          "412": {
+            "description": "Precondition Failed"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/entries/updateSingle/{id}": {
+    "/users/updateSingle/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -111,19 +110,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
+                "name": {
                   "example": "any"
                 },
                 "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
                   "example": "any"
                 }
               }
@@ -134,13 +124,19 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/entries/deleteSingle/{id}": {
+    "/users/deleteSingle/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -154,6 +150,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
